# syncdb

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
comparison/: comparison.py  empty_tables.py
dialects/: __init__.py  base.py  mysql.py
migration/: __init__.py  get_fk_graph.py  migrate.py  migrate_table.py  resolve_table_order.py  set_fk_checks.py
queries/: __init__.py  information_schema.py
validation/: __ini__.py  run_validation.py  validate.py
