[tool.uv]
package = true

[project]
name = "syncdb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.2",
    "pandas>=3.0.2",
    "pymysql>=1.1.2",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
]

[project.scripts]
syncdb = "main:cli"